@@ -1,86 +1,0 @@
-#!/usr/bin/make -f
-
-package=libghfaxwidgets0
-export DH_VERBOSE=1
-export DH_COMPAT=3
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-	dh_clean
-
-	CFLAGS="-O2"				\
-	./configure 				\
-		--enable-shared			\
-		--enable-static			\
-		--prefix=/usr			\
-		--sysconfdir=/etc		\
-		--infodir=/usr/share/info	\
-		--mandir=/usr/share/man
-
-	$(MAKE)
-
-	touch build-stamp
-
-
-clean:
-	dh_testdir
-	dh_testroot
-	-rm -f build-stamp install-stamp
-	-$(MAKE) distclean
-#	-rm -rf Makefile src/Makefile test/Makefile config.h config.cache config.log config.status
-#	-rm -rf libtool ghfw-config src/.libs src/*.o
-	dh_clean
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-	$(MAKE) install 				\
-		prefix=`pwd`/debian/$(package)/usr		\
-		includedir=`pwd`/debian/$(package)/usr/include	\
-		libdir=`pwd`/debian/$(package)/usr/lib	\
-		sysconfdir=`pwd`/debian/$(package)/etc		\
-		infodir=`pwd`/debian/$(package)/usr/share/info	\
-		mandir=`pwd`/debian/$(package)/usr/share/man   \
-		datadir=`pwd`/debian/$(package)/usr/share
-	dh_movefiles -plibghfaxwidgets-dev --sourcedir=debian/$(package) \
-		usr/bin/ghfw-config \
-		usr/include/ghfaxwidgets \
-		usr/lib/libghfax_widgets.a \
-		usr/lib/libghfax_widgets.la \
-		usr/lib/libghfax_widgets.so
-	install -d debian/libghfaxwidgets-dev/usr/share/aclocal/ghfaxwidgets
-	cp macros/ghfaxwidgets*.m4 \
-		debian/libghfaxwidgets-dev/usr/share/aclocal/ghfaxwidgets/
-	rm -rf debian/$(package)/usr/include \
-		debian/$(package)/usr/bin \
-		debian/$(package)/usr/share/man/man1
-	touch install-stamp
-
-
-binary-indep: build install
-
-binary-arch: build install
-	dh_testdir -a
-	dh_testroot -a
-	dh_installdocs -a AUTHORS docs/README docs/README.cvs NEWS
-	dh_installchangelogs -a ChangeLog
-	#dh_installmenu
-	#dh_installman
-	dh_undocumented -plibghfaxwidget-dev ghfw-config.1
-	dh_makeshlibs -V
-	dh_strip -a
-	dh_compress -a
-	dh_fixperms -a
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
-
-
-binary: binary-indep binary-arch
-.PHONY: binary clean binary-indep binary-arch binary install
