@@ -1,5 +1,0 @@
-ghfaxwidgets (0.0.0-1) unstable; urgency=low
-
-  * Initial release
-
- -- Wolfgang Sourdeau <was@debian.org>  Mon,  1 Oct 2001 02:53:34 -0400
